// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/null-channel/eddington/proto/user";
option java_multiple_files = true;
option java_package = "io.nullcloud.users";
option java_outer_classname = "UserServiceProto";

package user;

// The greeting service definition.
service UserService {
  // Sends a greeting
  rpc GetUserContext(GetUserContextRequest) returns (GetUserContextReply) {}
}

message GetUserContextRequest { string user_id = 1; }

// The response message containing the greetings
message GetUserContextReply {

  // Org stuff
  Org org = 10;
}

message Org {
  int64 ID = 1;
  string Name = 2;
  string OwnerID = 3;
  repeated ResourceGroup resourceGroups = 4;
}

message ResourceGroup {
  int64 id = 1;
  int64 orgId = 2;
  string name = 3;
  repeated Resource resources = 4;
}

message Resource {
  int64 id = 1;
  int64 createdAt = 2;
  string type = 3;
}
